Fix width on mobile

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -76,6 +76,7 @@ a {
 }
 
 .sources{
+    flex:1 1 100%;
     color:#fff;
     margin-top:4rem;
     p{
